# AoC2021

./: pyproject.toml
01/: 01_1.py  01_2.py
02/: 02_1.py  02_2.py
03/: 03_1.py  03_2.py  README.md
04/: 04_1.py  04_2.py
05/: 05_1.py  05_2.py
06/: 06_1.py  06_1a.py  06_2.py
07/: 07_1.py  07_2.py
08/: 08_1.py  08_2.py
09/: 09_1.py  09_2.py
10/: 10_1.py  10_2.py
11/: 11_1.py  11_2.py
12/: 12_1.py  12_2.py
13/: 13_1.py  13_2.py
14/: 14_1.py  14_2.py
15/: 15_1.py  15_2.py  animate.py
16/: 16_1.py  16_2.py
17/: 17_1.py  17_2.py
18/: 18_1.py  18_2.py
19/: 19_1.py  19_1b.py  19_2.py
20/: 20_1.py  20_2.py
23/: 23_1.py  23_1_b.py  23_2.py  23_2_b.py  23_3.py  23_4.py  23_5.py  dijkstra.py
25/: 25_1.py
